welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:23: error: not found: value ecvritMessage
    ecvritMessage(avancement)
    ^